# unduhin

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  cspell.json
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/migrations/: 20260520000001_init.sql  20260521000001_settings_phase4.sql  20260524000001_media_info.sql  20260525000001_release_settings.sql  20260601000001_schedules.sql  20260901000001_download_headers.sql  20260902000001_downloads_source.sql  20260903000001_watch_clipboard.sql  20260904000001_downloads_speed_samples.sql  20260905000001_downloads_torrent.sql  20260906000001_retire_cancelled_status.sql  20260907000001_ytdlp_impersonate.sql
crates/core/src/: build_info.rs  category.rs  db.rs  download.rs  error.rs  event.rs  lib.rs  logging.rs  queue.rs  schedule.rs  secret.rs  settings.rs  speed.rs  tooling.rs  torrent_handoff.rs  wire.rs
crates/core/src/wire/: framing.rs
crates/core/src/ytdlp/: mod.rs  progress.rs  wire.rs
crates/core/tests/: export_wire_types.rs  integration.rs  torrent_e2e.rs  wire_fixtures.rs
crates/core/tests/fixtures/wire/: inbound_download.json  inbound_download_media.json  inbound_status.json  outbound_ack.json  outbound_error.json  outbound_pong.json  outbound_status.json
crates/engine/: Cargo.toml
crates/engine/src/: download.rs  error.rs  filename.rs  http.rs  lib.rs  meta.rs  progress.rs  retry.rs  segment.rs  throttle.rs  transfer.rs
crates/engine/tests/: integration.rs
crates/native-host/: Cargo.toml
crates/native-host/src/: main.rs  pipe_client.rs
crates/native-host/tests/: framing.rs  process_smoke.rs  pump_pipe_to_stdout.rs
crates/torrent/: Cargo.toml
crates/torrent/src/: lib.rs
crates/torrent/tests/: metadata_probe.rs
extension/: .gitignore  esbuild.config.mjs  manifest.json  package.json  tsconfig.json  vitest.config.ts
extension/native-host/: README.md
extension/src/background/: context-menu.ts  cookie-forwarder.ts  download-interceptor.ts  header-capture.ts  hls-master.ts  intercept-rules.ts  media-sniffer.ts  native-bridge.ts  recent-jobs.ts  rule-metrics.ts  service-worker.ts
extension/src/options/: options.css  options.html  options.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/src/shared/: log.ts  settings.ts  types.ts  version.ts  wire.d.ts
extension/tests/: apply-server-settings.test.ts  hls-master.test.ts  rule-metrics.test.ts  should-intercept.test.ts
frontend/: index.html  package.json  tray-popover.html  tsconfig.json  vite.config.ts
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.vue  i18n.ts  main.ts  style.css
frontend/src/components/: AddUrlDialog.vue  AppSidebar.vue  AppStatusBar.vue  AppTitleBar.vue  AppTopBar.vue  BatchActionBar.vue  ConfirmOnQuitDialog.vue  DeleteConfirmDialog.vue  DownloadGroup.vue  DownloadRow.vue  EmptyState.vue  ExtBadge.vue  ProgressBar.vue  RowMenu.vue  ScheduleDialog.vue  SkeletonRow.vue  SortToolbar.vue  StatusBadge.vue
frontend/src/components/detail/: DetailHistory.vue  DetailOverview.vue  DetailPane.vue  DetailSegments.vue  DetailTorrent.vue  SegmentBars.vue  SpeedSparkline.vue
frontend/src/components/media/: MediaFormatRow.vue  MediaFormatsDialog.vue  MediaInstallBanner.vue
frontend/src/components/settings/: SettingCard.vue  SettingRow.vue  SettingsSection.vue  SettingsSidebar.vue
frontend/src/components/settings/browser/: AskHandoffDialog.vue  BrowserBehaviourCard.vue  BrowserCard.vue  BrowserClipboardCard.vue  BrowserDomainRulesCard.vue  BrowserExtensionsCard.vue  BrowserFileTypesCard.vue  BrowserMinSizeCard.vue  BrowserStatusCard.vue  RuleRow.vue
frontend/src/components/settings/categories/: CategoriesTable.vue  CategoryDialog.vue  CategoryIconPicker.vue  CategoryRow.vue  RuleRow.vue  (+1 more)
frontend/src/components/ui/: Button.vue  Dialog.vue  Drawer.vue  Input.vue  Select.vue  Slider.vue  Switch.vue  Toaster.vue
frontend/src/composables/: useAboutPage.ts  useBehaviourSettings.ts  useBrowserSettings.ts  useBrowserStatus.ts  useClipboardCapture.ts  useConfirmOnQuit.ts  useDeleteConfirm.ts  useDownloadsSort.test.ts  useDownloadsSort.ts  useElapsed.ts  useGeneralSettings.ts  useGroupedDownloads.test.ts  useGroupedDownloads.ts  useLocale.ts  useMediaSettings.ts  useNetworkSettings.ts  useNotificationPreview.ts  useNotifications.ts  useRuleMetrics.ts  useSettingsFilter.ts  useTheme.ts  useToast.ts  useToolingStatus.ts  useTorrentSettings.test.ts  useTorrentSettings.ts  useUnduhinEvents.ts
frontend/src/lib/: categoryIcons.ts  clipboardMatch.test.ts  clipboardMatch.ts  format.test.ts  format.ts  ruleExport.test.ts  ruleExport.ts  settingsManifest.ts  torrentFormat.test.ts  torrentFormat.ts  torrentInput.test.ts  torrentInput.ts  utils.ts
frontend/src/locales/: en.json  i18n-parity.test.ts  id.json
frontend/src/popover/: Popover.vue  main.ts
frontend/src/router/: index.ts
frontend/src/stores/: categories.ts  detail.ts  downloads.test.ts  downloads.ts  overlays.ts  schedules.test.ts  schedules.ts  selection.ts  settings.ts  system.ts
frontend/src/types/: tauri-bindings.ts  wire.d.ts
frontend/src/views/: DownloadsView.vue
frontend/src/views/settings/: SettingsAbout.vue  SettingsBehaviour.vue  SettingsBrowser.vue  SettingsCategories.vue  SettingsGeneral.vue  SettingsLayout.vue  SettingsMedia.vue  SettingsNetwork.vue  SettingsTorrent.vue
scripts/: build-update-manifest.ps1  bump-version.ps1  gen_tray_icons.ps1  generate-licences.ps1  release.ps1  sign-artifacts.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  tray-popover.json
src-tauri/icons/: icon.icns
src-tauri/native-host/: com.unduhin.host.json
src-tauri/nsis-hooks/: hooks.nsi
src-tauri/src/: browser_integration.rs  commands.rs  error.rs  extension_sync.rs  i18n.rs  lib.rs  main.rs  manifest.rs  pipe.rs  taskbar.rs  tray.rs  window.rs
src-tauri/tests/: browser_integration_smoke.rs  pipe_settings_round_trip.rs  pipe_smoke.rs
(+19 files in other folders)
