[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/core",      # package name: unduhin-core
    "crates/torrent",
    "crates/cli",
    "crates/native-host",
    "src-tauri",
]
# `vendor/` holds patched forks of third-party crates (see [patch.crates-io]
# below); they are dependencies, not workspace members.
exclude = ["vendor"]

[workspace.package]
version = "1.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dannyatthaya/unduhin"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip"] }
url = { version = "2.5", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
humantime = "2"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
tempfile = "3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# Vendored fork of librqbit-dht 5.3.1 (pulled in transitively by librqbit) with
# a one-arm fix to its DHT UDP recv loop: tolerate Windows WSAECONNRESET
# (os error 10054, from ICMP port-unreachable) instead of letting it kill the
# DHT framer — which otherwise takes DHT down for the entire session on Windows.
# Upstream librqbit, including 9.0-rc, never disables SIO_UDP_CONNRESET, so this
# is the only fix. Re-sync `vendor/librqbit-dht` if librqbit is bumped; drop it
# once fixed upstream (issue to be filed).
[patch.crates-io]
librqbit-dht = { path = "vendor/librqbit-dht" }
