[package]
name = "unduhin-native-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Native messaging host that bridges the Unduhin browser extension to the main Unduhin app over a Windows named pipe."

[[bin]]
name = "unduhin-native-host"
path = "src/main.rs"

[dependencies]
unduhin-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.40", default-features = false, features = ["rt", "macros", "io-util", "io-std", "net", "time", "process", "sync"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
